tests/trybuild/views/unexpected_token.stderr
error: no rules expected the token `+`
 --> tests/trybuild/views/unexpected_token.rs:7:25
  |
7 | type Views = Views!(&A, + &B,);
  |                         ^ no rules expected this token in macro call
